// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/index.tsx > should render the correct output 1`] = `
"+--------------------------------------------------------------------------------------------------+
| [1mFull name[22m                                      | [1mEmail[22m                                           |
|--------------------------------------------------------------------------------------------------|
| John Doe                                       | john@doe.com                                    |
|--------------------------------------------------------------------------------------------------|
| John Doe                                       | john@doe.com                                    |
+--------------------------------------------------------------------------------------------------+"
`;

exports[`src/index.tsx > should render the correct output 2`] = `
"+--------------------------------------------------------------------------------------------------+
| [1mFull name[22m                                                                                        |
|--------------------------------------------------------------------------------------------------|
| John Doe                                                                                         |
+--------------------------------------------------------------------------------------------------+"
`;

exports[`src/index.tsx > should render the correct output 3`] = `
"+--------------------------------------------------------------------------------------------------+
| [1mPath[22m                                           | [1mSize[22m                                            |
|--------------------------------------------------------------------------------------------------|
| /this/is/a/very/long/path/that/will/be/wrapped | 1.2MB                                           |
| /or/will/it/not/?                              |                                                 |
|--------------------------------------------------------------------------------------------------|
| /not/so/long/path                              | 100GB                                           |
+--------------------------------------------------------------------------------------------------+"
`;
